Some small adjustments